[gd_scene load_steps=12 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://external/enemy_frames/enemy_00.png" type="Texture" id=2]
[ext_resource path="res://external/enemy_frames/enemy_01.png" type="Texture" id=3]
[ext_resource path="res://external/enemy_frames/enemy_02.png" type="Texture" id=4]
[ext_resource path="res://external/enemy_frames/enemy_03.png" type="Texture" id=5]
[ext_resource path="res://external/enemy_frames/enemy_04.png" type="Texture" id=6]
[ext_resource path="res://external/enemy_frames/enemy_05.png" type="Texture" id=7]
[ext_resource path="res://external/enemy_frames/enemy_06.png" type="Texture" id=8]
[ext_resource path="res://external/enemy_frames/enemy_07.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 6.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="enemy" type="Area2D"]
z_index = 10
collision_layer = 4
collision_mask = 27
script = ExtResource( 1 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -30 )
scale = Vector2( 6, 6 )
frames = SubResource( 2 )
frame = 4

[node name="idle_wait_timer" type="Timer" parent="."]

[node name="idle_wander_timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="frame_changed" from="animated_sprite" to="." method="_on_animated_sprite_frame_changed"]
